# Documind

./: .gitignore  CLAUDE.md  README.md  database.py  docker-compose.yml  main.py  models.py  package-lock.json  package.json  pyproject.toml  schemas.py  test.py
api/: chat.py  document.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
services/: rag_core.py
